--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'io.github.novacrypto:BIP39:0.1.9'
     implementation 'io.github.novacrypto:BIP32:0.0.9'
     //implementation 'com.google.guava:guava:25.1-android'
-    androidTestImplementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
+    //androidTestImplementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.4.0'
     androidTestImplementation group: 'org.ligboy.retrofit2', name: 'converter-fastjson-android', version: '2.1.0'
 }
